k8s-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: api
  name: api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 1
  selector:
    matchLabels:
      service: api
  minReadySeconds: 5
  template:
    metadata:
      labels:
        service: api
    spec:
      containers:
      - env:
        - name: ELASTIC_HOST
          value: "http://elasticsearch.composedb:9200"      
        - name: IFRAMELY_API_KEY
          valueFrom:
            secretKeyRef:
              key: iframely-api-key
              name: api-secret
        image: 534970752686.dkr.ecr.us-east-1.amazonaws.com/indexas-backend:0.0.4
        command: ["yarn"]
        args: ["start"]
        imagePullPolicy: Always  
        resources:
          requests:
            memory: "256Mi"
            cpu: "25m"
        name: api
        ports:
        - name: "http"
          containerPort: 3000    
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    service: api
  name: api
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    service: api
