ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compose-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-gzip: "true"
    nginx.ingress.kubernetes.io/gzip-types: "*"
    nginx.ingress.kubernetes.io/server-snippet: |
        gzip on;
        gzip_disable "MSIE [1-6]\.";
        gzip_vary on;
        gzip_proxied any;
        gzip_comp_level 5;
        gzip_min_length 512;
        gzip_buffers 16 128k;
        gzip_http_version 1.1;
        gzip_types
            application/json
            application/vnd.api+json
            text/html;        
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/session-cookie-hash: "sha1"     
spec:     
  rules:
  - host: composedb.index.as
    http:
      paths:
      - path: /ceramic(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ceramic
            port:
              number: 80
      - path: /composedb(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: composedb
            port:
              number: 80              
      - path: /search(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 80
